fixed the overlapping services items, and removed the side scrolling issues caused by the carousel

--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ a:focus {
     width: 100%;
     object-fit: cover;
     height: 100%;
-    max-height: 300px;
+    max-height: 255px;
     border-radius: 5px 5px 0 0;
 }
 @media(min-width:1000px){
@@ -1159,6 +1159,7 @@ a:focus {
 .testimonial {
     position: relative;
     padding: 45px 0;
+    width: 100%;
 }
 
 .testimonial .testimonial-item {
@@ -1254,6 +1255,7 @@ a:focus {
     justify-content: center;
     transition: background-color 0.3s;
     font-size: 24px; /* Icon size */
+    z-index: 1000;
 }
 .whatsapp-button:hover {
     background-color: #128C7E; /* Darker green for hover */
